--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,16 @@ services:
   app:
     container_name: app
     build:
-      context: .               # Dockerfile のあるビルドコンテキスト
-      dockerfile: Dockerfile  # 使用する Dockerfile のパス
+      context: . # Dockerfile のあるビルドコンテキスト
+      dockerfile: Dockerfile # 使用する Dockerfile のパス
     ports:
-      - "4567:4567"            # ホスト:コンテナ のポートバインド（Sinatra 用）
+      - "4567:4567" # ホスト:コンテナ のポートバインド（Sinatra 用）
     volumes:
-      - .:/app                 # ソースコードをコンテナにマウント（ライブ編集用）
+      - .:/app # ソースコードをコンテナにマウント（ライブ編集用）
     depends_on:
-      - db                    # db サービス起動を待つ
+      - db # db サービス起動を待つ
     environment:
-      DATABASE_URL: postgres://postgres:password@db:5432/app_development  # ActiveRecord 用 DB URL
+      DATABASE_URL: postgres://postgres:password@db:5432/app_development # ActiveRecord 用 DB URL
     command: >
       bash -c "
         # DB が起動するまで待機
@@ -30,15 +30,15 @@ services:
   # PostgreSQL コンテナ
   db:
     container_name: db
-    image: postgres:latest     # 使用する公式 PostgreSQL イメージ
+    image: postgres:17 # 使用する公式 PostgreSQL イメージ
     environment:
-      POSTGRES_USER: postgres         # DB ユーザー名
-      POSTGRES_PASSWORD: password     # DB パスワード
-      POSTGRES_DB: app_development    # 初期作成するデータベース名
+      POSTGRES_USER: postgres # DB ユーザー名
+      POSTGRES_PASSWORD: password # DB パスワード
+      POSTGRES_DB: app_development # 初期作成するデータベース名
     ports:
-      - "5432:5432"            # ホスト:コンテナ のポートバインド
+      - "5432:5432" # ホスト:コンテナ のポートバインド
     volumes:
-      - db_data:/var/lib/postgresql/data  # DB データの永続化
+      - db_data:/var/lib/postgresql/data # DB データの永続化
 
 # 永続ボリューム定義（PostgreSQL のデータ保存用）
 volumes:
