chore: Docker環境に変更

--- a/config/database.yml
+++ b/config/database.yml
@@ -16,4 +16,5 @@ test:
 
 production:
   <<: *default
-  database: app_production
+  url: <%= ENV['DATABASE_URL'] %> # RenderのPostgresの接続URL
+  pool: 5
